antlr/v4/gramatica_v4Parser.py
# Generated from gramatica_v4.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramatica_v4Parser ( Parser ):

    grammarFileName = "gramatica_v4.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "'{'", "'}'", "'if'", "'else'", 
                     "'while'", "'for'", "'return'", "'break'", "'continue'", 
                     "'import'", "'switch'", "'case'", "'default'", "'int'", 
                     "'float'", "'string'", "'bool'", "'void'", "'struct'", 
                     "'true'", "'false'", "'print'", "'['", "']'", "','", 
                     "'('", "')'", "';'", "':'", "'.'", "'='", "'+'", "'-'", 
                     "'/'", "'*'", "'%'", "'>='", "'<='", "'>'", "'<'", 
                     "'=='", "'<>'", "'!='", "'&&'", "'||'", "'!'", "'?'" ]

    symbolicNames = [ "<INVALID>", "INI", "INILLAVE", "FIN", "IF", "ELSE", 
                      "WHILE", "FOR", "RETURN", "BREAK", "CONTINUE", "IMPORT", 
                      "SWITCH", "CASE", "DEFAULT", "INT", "FLOAT", "STRING", 
                      "BOOL", "VOID", "STRUCT", "TRUE", "FALSE", "PRINT", 
                      "LBRACKET", "RBRACKET", "COMMA", "PARENI", "PAREND", 
                      "SEMI", "COLON", "DOT", "ASSIGN", "SUM", "REST", "DIV", 
                      "MUL", "MOD", "MAYORIGUAL", "MENORIGUAL", "MAYOR", 
                      "MENOR", "IGUAL", "NOIGUAL", "DIFF", "AND", "OR", 
                      "NOT", "QUESTION", "VAR", "NUM", "FNUM", "STRVAL", 
                      "LINE_COMMENT", "BLOCK_COMMENT", "WS" ]

    RULE_root = 0
    RULE_programa = 1
    RULE_bloque = 2
    RULE_statement = 3
    RULE_varint = 4
    RULE_asignacion = 5
    RULE_arraydecl = 6
    RULE_arrayasign = 7
    RULE_structdecl = 8
    RULE_campostruct = 9
    RULE_varstruct = 10
    RULE_structasign = 11
    RULE_ifstm = 12
    RULE_whilestm = 13
    RULE_forstm = 14
    RULE_switchstm = 15
    RULE_caseclause = 16
    RULE_defaultclause = 17
    RULE_tipodato = 18
    RULE_parametro = 19
    RULE_parametros = 20
    RULE_funcion = 21
    RULE_returnstm = 22
    RULE_breakstm = 23
    RULE_continuestm = 24
    RULE_importstm = 25
    RULE_llamada = 26
    RULE_printstm = 27
    RULE_expr = 28
    RULE_logicalOr = 29
    RULE_logicalAnd = 30
    RULE_igualdad = 31
    RULE_comparacion = 32
    RULE_suma = 33
    RULE_producto = 34
    RULE_unario = 35
    RULE_primario = 36

    ruleNames =  [ "root", "programa", "bloque", "statement", "varint", 
                   "asignacion", "arraydecl", "arrayasign", "structdecl", 
                   "campostruct", "varstruct", "structasign", "ifstm", "whilestm", 
                   "forstm", "switchstm", "caseclause", "defaultclause", 
                   "tipodato", "parametro", "parametros", "funcion", "returnstm", 
                   "breakstm", "continuestm", "importstm", "llamada", "printstm", 
                   "expr", "logicalOr", "logicalAnd", "igualdad", "comparacion", 
                   "suma", "producto", "unario", "primario" ]

    EOF = Token.EOF
    INI=1
    INILLAVE=2
    FIN=3
    IF=4
    ELSE=5
    WHILE=6
    FOR=7
    RETURN=8
    BREAK=9
    CONTINUE=10
    IMPORT=11
    SWITCH=12
    CASE=13
    DEFAULT=14
    INT=15
    FLOAT=16
    STRING=17
    BOOL=18
    VOID=19
    STRUCT=20
    TRUE=21
    FALSE=22
    PRINT=23
    LBRACKET=24
    RBRACKET=25
    COMMA=26
    PARENI=27
    PAREND=28
    SEMI=29
    COLON=30
    DOT=31
    ASSIGN=32
    SUM=33
    REST=34
    DIV=35
    MUL=36
    MOD=37
    MAYORIGUAL=38
    MENORIGUAL=39
    MAYOR=40
    MENOR=41
    IGUAL=42
    NOIGUAL=43
    DIFF=44
    AND=45
    OR=46
    NOT=47
    QUESTION=48
    VAR=49
    NUM=50
    FNUM=51
    STRVAL=52
    LINE_COMMENT=53
    BLOCK_COMMENT=54
    WS=55

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_root

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExprInputContext(RootContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.RootContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ExprContext,0)

        def EOF(self):
            return self.getToken(gramatica_v4Parser.EOF, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprInput" ):
                return visitor.visitExprInput(self)
            else:
                return visitor.visitChildren(self)


    class ProgInputContext(RootContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.RootContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def programa(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ProgramaContext,0)

        def EOF(self):
            return self.getToken(gramatica_v4Parser.EOF, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgInput" ):
                return visitor.visitProgInput(self)
            else:
                return visitor.visitChildren(self)



    def root(self):

        localctx = gramatica_v4Parser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.state = 80
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21, 22, 27, 47, 49, 50, 51, 52]:
                localctx = gramatica_v4Parser.ExprInputContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.expr()
                self.state = 75
                self.match(gramatica_v4Parser.EOF)
                pass
            elif token in [1]:
                localctx = gramatica_v4Parser.ProgInputContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.programa()
                self.state = 78
                self.match(gramatica_v4Parser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_programa

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ProgramaRuleContext(ProgramaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a gramatica_v4Parser.ProgramaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INI(self):
            return self.getToken(gramatica_v4Parser.INI, 0)
        def bloque(self):
            return self.getTypedRuleContext(gramatica_v4Parser.BloqueContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramaRule" ):
                return visitor.visitProgramaRule(self)
            else:
                return visitor.visitChildren(self)



    def programa(self):

        localctx = gramatica_v4Parser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programa)
        try:
            localctx = gramatica_v4Parser.ProgramaRuleContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(gramatica_v4Parser.INI)
            self.state = 83
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INILLAVE(self):
            return self.getToken(gramatica_v4Parser.INILLAVE, 0)

        def FIN(self):
            return self.getToken(gramatica_v4Parser.FIN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v4Parser.StatementContext)
            else:
                return self.getTypedRuleContext(gramatica_v4Parser.StatementContext,i)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_bloque

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = gramatica_v4Parser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bloque)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(gramatica_v4Parser.INILLAVE)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 562949963882448) != 0:
                self.state = 86
                self.statement()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(gramatica_v4Parser.FIN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varint(self):
            return self.getTypedRuleContext(gramatica_v4Parser.VarintContext,0)


        def SEMI(self):
            return self.getToken(gramatica_v4Parser.SEMI, 0)

        def arraydecl(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ArraydeclContext,0)


        def asignacion(self):
            return self.getTypedRuleContext(gramatica_v4Parser.AsignacionContext,0)


        def arrayasign(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ArrayasignContext,0)


        def structasign(self):
            return self.getTypedRuleContext(gramatica_v4Parser.StructasignContext,0)


        def ifstm(self):
            return self.getTypedRuleContext(gramatica_v4Parser.IfstmContext,0)


        def whilestm(self):
            return self.getTypedRuleContext(gramatica_v4Parser.WhilestmContext,0)


        def forstm(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ForstmContext,0)


        def switchstm(self):
            return self.getTypedRuleContext(gramatica_v4Parser.SwitchstmContext,0)


        def returnstm(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ReturnstmContext,0)


        def llamada(self):
            return self.getTypedRuleContext(gramatica_v4Parser.LlamadaContext,0)


        def printstm(self):
            return self.getTypedRuleContext(gramatica_v4Parser.PrintstmContext,0)


        def funcion(self):
            return self.getTypedRuleContext(gramatica_v4Parser.FuncionContext,0)


        def structdecl(self):
            return self.getTypedRuleContext(gramatica_v4Parser.StructdeclContext,0)


        def varstruct(self):
            return self.getTypedRuleContext(gramatica_v4Parser.VarstructContext,0)


        def breakstm(self):
            return self.getTypedRuleContext(gramatica_v4Parser.BreakstmContext,0)


        def continuestm(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ContinuestmContext,0)


        def importstm(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ImportstmContext,0)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = gramatica_v4Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.varint()
                self.state = 95
                self.match(gramatica_v4Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.arraydecl()
                self.state = 98
                self.match(gramatica_v4Parser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                self.asignacion()
                self.state = 101
                self.match(gramatica_v4Parser.SEMI)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 103
                self.arrayasign()
                self.state = 104
                self.match(gramatica_v4Parser.SEMI)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 106
                self.structasign()
                self.state = 107
                self.match(gramatica_v4Parser.SEMI)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 109
                self.ifstm()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 110
                self.whilestm()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 111
                self.forstm()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 112
                self.switchstm()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 113
                self.returnstm()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 114
                self.llamada()
                self.state = 115
                self.match(gramatica_v4Parser.SEMI)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 117
                self.printstm()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 118
                self.funcion()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 119
                self.structdecl()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 120
                self.varstruct()
                self.state = 121
                self.match(gramatica_v4Parser.SEMI)
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 123
                self.breakstm()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 124
                self.continuestm()
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 125
                self.importstm()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(gramatica_v4Parser.VAR, 0)

        def INT(self):
            return self.getToken(gramatica_v4Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(gramatica_v4Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(gramatica_v4Parser.STRING, 0)

        def BOOL(self):
            return self.getToken(gramatica_v4Parser.BOOL, 0)

        def ASSIGN(self):
            return self.getToken(gramatica_v4Parser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ExprContext,0)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_varint

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarint" ):
                return visitor.visitVarint(self)
            else:
                return visitor.visitChildren(self)




    def varint(self):

        localctx = gramatica_v4Parser.VarintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varint)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            _la = self._input.LA(1)
            if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 491520) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 129
            self.match(gramatica_v4Parser.VAR)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 130
                self.match(gramatica_v4Parser.ASSIGN)
                self.state = 131
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(gramatica_v4Parser.VAR, 0)

        def ASSIGN(self):
            return self.getToken(gramatica_v4Parser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ExprContext,0)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_asignacion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = gramatica_v4Parser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(gramatica_v4Parser.VAR)
            self.state = 135
            self.match(gramatica_v4Parser.ASSIGN)
            self.state = 136
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraydeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_v4Parser.LBRACKET)
            else:
                return self.getToken(gramatica_v4Parser.LBRACKET, i)

        def RBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_v4Parser.RBRACKET)
            else:
                return self.getToken(gramatica_v4Parser.RBRACKET, i)

        def VAR(self):
            return self.getToken(gramatica_v4Parser.VAR, 0)

        def INT(self):
            return self.getToken(gramatica_v4Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(gramatica_v4Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(gramatica_v4Parser.STRING, 0)

        def BOOL(self):
            return self.getToken(gramatica_v4Parser.BOOL, 0)

        def ASSIGN(self):
            return self.getToken(gramatica_v4Parser.ASSIGN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v4Parser.ExprContext)
            else:
                return self.getTypedRuleContext(gramatica_v4Parser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_v4Parser.COMMA)
            else:
                return self.getToken(gramatica_v4Parser.COMMA, i)

        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_arraydecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraydecl" ):
                return visitor.visitArraydecl(self)
            else:
                return visitor.visitChildren(self)




    def arraydecl(self):

        localctx = gramatica_v4Parser.ArraydeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arraydecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            _la = self._input.LA(1)
            if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 491520) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 139
            self.match(gramatica_v4Parser.LBRACKET)
            self.state = 140
            self.match(gramatica_v4Parser.RBRACKET)
            self.state = 141
            self.match(gramatica_v4Parser.VAR)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 142
                self.match(gramatica_v4Parser.ASSIGN)
                self.state = 143
                self.match(gramatica_v4Parser.LBRACKET)
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if ((_la) & ~0x3f) == 0 and ((1 << _la) & 8584986930184192) != 0:
                    self.state = 144
                    self.expr()
                    self.state = 149
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==26:
                        self.state = 145
                        self.match(gramatica_v4Parser.COMMA)
                        self.state = 146
                        self.expr()
                        self.state = 151
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 154
                self.match(gramatica_v4Parser.RBRACKET)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayasignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(gramatica_v4Parser.VAR, 0)

        def LBRACKET(self):
            return self.getToken(gramatica_v4Parser.LBRACKET, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v4Parser.ExprContext)
            else:
                return self.getTypedRuleContext(gramatica_v4Parser.ExprContext,i)


        def RBRACKET(self):
            return self.getToken(gramatica_v4Parser.RBRACKET, 0)

        def ASSIGN(self):
            return self.getToken(gramatica_v4Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_arrayasign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrayasign" ):
                return visitor.visitArrayasign(self)
            else:
                return visitor.visitChildren(self)




    def arrayasign(self):

        localctx = gramatica_v4Parser.ArrayasignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arrayasign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(gramatica_v4Parser.VAR)
            self.state = 158
            self.match(gramatica_v4Parser.LBRACKET)
            self.state = 159
            self.expr()
            self.state = 160
            self.match(gramatica_v4Parser.RBRACKET)
            self.state = 161
            self.match(gramatica_v4Parser.ASSIGN)
            self.state = 162
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(gramatica_v4Parser.STRUCT, 0)

        def VAR(self):
            return self.getToken(gramatica_v4Parser.VAR, 0)

        def INILLAVE(self):
            return self.getToken(gramatica_v4Parser.INILLAVE, 0)

        def FIN(self):
            return self.getToken(gramatica_v4Parser.FIN, 0)

        def campostruct(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v4Parser.CampostructContext)
            else:
                return self.getTypedRuleContext(gramatica_v4Parser.CampostructContext,i)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_structdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructdecl" ):
                return visitor.visitStructdecl(self)
            else:
                return visitor.visitChildren(self)




    def structdecl(self):
